cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

# 2023-3-29
add_subdirectory(84_largestRectangleArea)
add_subdirectory(739_dailyTemperatures)
add_subdirectory(503_nextGreaterElements)

# 2023-3-30
add_subdirectory(547_findCircleNum)
add_subdirectory(523_checkSubarraySum)
add_subdirectory(560_subarraySum)

# 2023-4-3
add_subdirectory(1004_longestOnes)
add_subdirectory(209_minSubArrayLen)

# 2023-4-4
add_subdirectory(1094_carPooling)
add_subdirectory(1109_corpFlightBookings)

